<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moi_exp_lite</name>
  <version>0.0.1</version>
  <description>ROS 2 launch scripts and logic for exploration and vision</description>

  <maintainer email="mbolvar11@gmail.com">Moises Bolivar Vivas</maintainer>
  <author email="mbolvar11@gmail.com">Moises Bolivar Vivas</author>
  <license>Apache-2.0</license>

  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- C++ build and runtime dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>ament_index_cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>turtlebot3_autorace_camera</exec_depend>
  <!-- Python and launch-related runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

